fixed mobile overflow x

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -138,14 +138,14 @@
     animation-delay: 1s;
 }
 .header li:nth-child(1) {
-    left: 70%;
+    left: 10%;
     width: 210px;
     height: 210px;
     bottom: -210px;
     animation-delay: 5s;
 }
 .header li:nth-child(2) {
-    left: 76%;
+    left: 10%;
     width: 100px;
     height: 100px;
     bottom: -100px;
@@ -159,7 +159,7 @@
     animation-delay: 8s;
 }
 .header li:nth-child(4) {
-    left: 46%;
+    left: 6%;
     width: 131px;
     height: 131px;
     bottom: -131px;
@@ -167,13 +167,13 @@
 }
 .header li:nth-child(5) {
     left: 32%;
-    width: 239px;
-    height: 239px;
+    width: 190px;
+    height: 190px;
     bottom: -239px;
     animation-delay: 1s;
 }
 .header li:nth-child(6) {
-    left: 60%;
+    left: 20%;
     width: 169px;
     height: 169px;
     bottom: -169px;
