--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -14,7 +14,7 @@
 }
 
 a {
-  padding: 1% 20px;
+  padding: 0 20px;
   color: white;
 }
 
@@ -42,6 +42,8 @@ a:hover {
 }
 
 #hamburger {
+  display: flex;
+
   width: 2rem;
   padding: 0.5rem;
 }
